--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
